tests/neg-custom-args/captures/fresh-counter.check
-- Error: tests/neg-custom-args/captures/fresh-counter.scala:22:6 ------------------------------------------------------
22 |  par(i, d) // error: separation failure
   |      ^
   |Separation failure: argument of type  (i : () ->{c.incr} Unit)
   |to method par: (p1: () => Unit, p2: () => Unit): Unit
   |corresponds to capture-polymorphic formal parameter p1 of type  () => Unit
   |and hides capabilities  {i}.
   |Some of these overlap with the captures of the second argument with type  (d : () ->{c.decr} Unit).
   |
   |  Hidden set of current argument        : {i}
   |  Hidden footprint of current argument  : {i, c.incr, c.count}
   |  Capture set of second argument        : {d}
   |  Footprint set of second argument      : {d, c.decr, c.count}
   |  The two sets overlap at               : {c.count}
   |
   |where:    => refers to a fresh root capability created in method test when checking argument to parameter p1 of method par
